# Halide

./: README.md
Basics1/: CMakeLists.txt  Makefile  cmake.bat  cmake.sh
Basics1/src/: HalideGamma.cpp  gamma.cpp  gamma0.cpp
Basics2/: Makefile
Basics2/src/: HalideSharp.cpp  sharp.cpp
Basics3/: Makefile
Basics3/src/: HalideCD.cpp  cd.cpp
CodeReuse1/: Makefile
CodeReuse1/include/: Median.hpp
CodeReuse1/src/: HalideMedian.cpp  HalideMedian_Y.cpp  median.cpp
CodeReuse2/: Makefile
CodeReuse2/include/: Convert.hpp  HalideDemosaic.hpp  HalideDenoise.hpp  HalideLscMap.hpp  HalideMix.hpp  HalideRGB2YCbCr.hpp  HalideYCbCr2RGB.hpp
CodeReuse2/src/: HalideDemosaic.cpp  HalideDenoise.cpp  (+6 more)
Exercise1/: Makefile
Exercise2/: Makefile
Fibonacci/: Makefile
HVX_GPU/: Makefile
LUT1/: Makefile
LUT2/: Makefile
RDom1/: Makefile
RDom2/: Makefile
RDom3/: Makefile
SNPE1/: .gitignore  setup_env.sh  tf1.py  tf1_test.py  tf2.py  tf2_test.py  tf_mlp.py  tf_mlp_test.py
SNPE2/: .gitignore  ReadMe_SNPE.md  setup_env.sh  tf_savepb.py
SNPE3/: .gitignore  UDOTutorial.md  convert_run_dlc.md
Schedule1/: .gitignore  Makefile
Schedule3/: Makefile
Schedule4/: Makefile
Schedule5/: Makefile
Tuple/: Makefile
images/: 5a9e_20150405_165352_614.mat  5a9e_20150405_165352_614.txt  6G7M_20150307_175028_814.mat  6G7M_20150307_175028_814.txt  IMG_20200508_202014675.mat  IMG_20200508_202014675.txt  IMG_20201009_123817328.mat  IMG_20201009_123817328.txt
include/: CFA.hpp  dng_io.h  read_metadata.hpp  tiny_dng_loader.h
scripts/: extract_lsmap.py  extract_metadata.py
(+105 files in other folders)
